--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -41,7 +41,7 @@
             <!-- <h2 style="color: white;">inotes</h2> -->
         </div>
         <div class="searchbar">
-            <form id="inputform" style="display: contents;" action="/addnote" method="post">
+            <form id="inputform" placeholder="Type your note here...." style="display: contents;" action="/addnote" method="post">
 
                 <input spellcheck="false" name="title" class="search" type="text">
                 <input id="addnote" type="submit" hidden>
