fix: date width issue

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -754,7 +754,7 @@
         color: rgb(94, 94, 94);
         text-transform: uppercase;
         align-items: center;
-        width: 120px;
+       /* width: 120px;*/
     }
 
     .note-date p {
